fix: correct spacing for figcaption

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ PROJECTS
 	text-align: center;
 }
 
-.projects h1 {
+.projects h2 {
 	margin-bottom: 0;
 }
 
